WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175046
WKPDFView doesn't respect safe area insets
https://bugs.webkit.org/show_bug.cgi?id=175046
Summary
WKPDFView doesn't respect safe area insets
Tim Horton
Reported
2017-08-01 14:38:36 PDT
WKPDFView doesn't respect safe area insets
Attachments
Patch
(11.35 KB, patch)
2017-08-01 14:38 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(11.87 KB, patch)
2017-08-01 14:54 PDT
,
Tim Horton
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-08-01 14:38:57 PDT
Created
attachment 316896
[details]
Patch
Tim Horton
Comment 2
2017-08-01 14:39:12 PDT
<
rdar://problem/33558386
>
Tim Horton
Comment 3
2017-08-01 14:54:51 PDT
Created
attachment 316899
[details]
Patch
Tim Horton
Comment 4
2017-08-02 10:51:51 PDT
http://trac.webkit.org/changeset/220138/webkit
Wenson Hsieh
Comment 5
2017-08-02 10:57:56 PDT
Comment on
attachment 316899
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316899&action=review
A minor follow-up question:
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:1271 > + [self _didChangeAvoidsUnsafeArea:NO];
I assume it's OK to call this, even though WebPageProxy's m_avoidsUnsafeArea may not have actually changed?
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:1286 > + [self _didChangeAvoidsUnsafeArea:_page->avoidsUnsafeArea()];
Ditto.
Tim Horton
Comment 6
2017-08-02 11:10:19 PDT
Yes, it's fine, just a little extra work. And we're already swapping out the content view, so it's not significant in the grand scheme of things.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug